# python-service-discovery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml
src/ebus_service_discovery/: __init__.py  cli.py  record.py  record.schema.json  resolver.py  schema.py
src/ebus_service_discovery_client/: __init__.py  cli.py  record.py  record.schema.json  resolver.py  schema.py
tests/: test_cli.py  test_record.py  test_resolver.py
